updated cors adn web config to support JWT